servicemesh/4.authorization_policy/authorization-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: postgres-deny-from-outside-ns
 namespace: istio-demo
spec:
 selector:
   matchLabels:
     app: k8s-postgres-app
     version: v1-community
 action: DENY
 rules:
 - from:
   - source:
       notNamespaces: ["istio-demo"]
