servicemesh/4.authorization_policy/frontend-authz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: frontend-authz
 namespace: istio-demo
spec:
 selector:
   matchLabels:
     app: k8s-quarkus-app
 action: ALLOW
 rules:
 - from:
     - source:
         namespaces: ["istio-system"]
     - source:
         principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
     - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
        paths: ["/notes/*"]
     - operation:
        methods: ["GET"]
        paths: ["/", "*png", "*js"]
